Dark mode css restructured;
Tabview not included;

--- a/public/css/base/_button.css
+++ b/public/css/base/_button.css
@@ -65,3 +65,12 @@ button {
     color: var(--color-on);
   }
 }
+
+html.dark-mode {
+  button {
+    color: var(--dm-color-light);
+    &.primary-colour {
+      color: var(--dm-color-light);
+    }
+  }
+}
