--- a/public/css/layout/_map_attribution.css
+++ b/public/css/layout/_map_attribution.css
@@ -16,6 +16,11 @@ body {
   pointer-events: none;
   user-select: none;
 
+  & > .logo {
+    pointer-events: auto;
+    height: 1em;
+  }
+
   .attribution-links {
     text-align: right;
     font-size: 95%;
