--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -1,5 +1,7 @@
 @import url('./base/_colours.css');
 
+@import url('./base/_colours_dark_mode.css');
+
 @import url('./base/_common.css');
 
 @import url('./base/_button.css');
@@ -26,17 +28,25 @@
 
 @import url('./elements/_dropdown.css');
 
+@import url('./elements/_key.css');
+
 @import url('./elements/_pills.css');
 
 @import url('./elements/_searchbox.css');
 
 @import url('./elements/_slider.css');
 
+@import url('./layout/_divider.css');
+
 @import url('./layout/_layerview.css');
 
 @import url('./layout/_legacy.css');
 
 @import url('./layout/_locationview.css');
+
+@import url('./layout/_map_toolbar.css');
+
+@import url('./layout/_scrollbar.css');
 
 @import url('./layout/_tabview.css');
 
