--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -1,12 +1,11 @@
 @import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200);
 
-
-.material-symbols-outlined  {
+.material-symbols-outlined {
   font-variation-settings:
-  'FILL' 0,
-  'wght' 300,
-  'GRAD' 0,
-  'opsz' 24;
+    'FILL' 0,
+    'wght' 300,
+    'GRAD' 0,
+    'opsz' 24;
   /* Customisation */
   text-align: center;
   color: var(--color-primary);
@@ -15,7 +14,8 @@
     color: var(--color-on);
   }
 
-  &.on-colour, &.on {
+  &.on-colour,
+  &.on {
     color: var(--color-on);
   }
 
@@ -30,4 +30,14 @@
 
 .active > .material-symbols-outlined {
   color: var(--color-on);
+}
+
+html.dark-mode {
+  .material-symbols-outlined {
+    color: var(--dm-color-light-secondary);
+
+    &.active {
+      color: var(--dm-color-on);
+    }
+  }
 }
