--- a/public/css/layout/_layerview.css
+++ b/public/css/layout/_layerview.css
@@ -30,7 +30,6 @@
   }
 
   > .header {
-
     .material-symbols-outlined {
       font-size: 1.5em;
     }
@@ -66,4 +65,16 @@
 
 #layers > .layer-view > .drawer {
   background: var(--color-light);
+}
+
+html.dark-mode {
+  #layers {
+    .drawer.layer-view .drawer {
+      background-color: var(--dm-color-dark-neutral);
+    }
+    & > .drawer.layer-group .drawer.layer-view {
+      background-color: var(--dm-color-dark-faded);
+      border-top: 1px solid var(--dm-color-medium);
+    }
+  }
 }
