--- a/public/css/layout/_locationview.css
+++ b/public/css/layout/_locationview.css
@@ -17,20 +17,20 @@
   & .contents {
     display: contents;
 
-    &:not(.inline)>* {
+    &:not(.inline) > * {
       grid-column: 1 / 3;
     }
 
-    &.inline>.label {
+    &.inline > .label {
       grid-column: 1;
     }
 
-    &.inline>div:nth-of-type(2) {
+    &.inline > div:nth-of-type(2) {
       grid-column: 2;
       min-width: 0;
     }
 
-    &.inline>.val {
+    &.inline > .val {
       grid-column: 2;
       text-align: right;
       word-break: break-word;
@@ -43,7 +43,7 @@
     font-weight: bold;
   }
 
-  & .label>.tooltip {
+  & .label > .tooltip {
     -webkit-user-select: none;
     user-select: none;
     height: 1.5em;
@@ -59,7 +59,7 @@
     border-bottom: 1px solid var(--color-mid);
     padding: 0;
 
-    &>.header {
+    & > .header {
       grid-column: 1 / 3;
       background-color: var(--color-primary);
       color: white;
@@ -94,7 +94,7 @@
     text-align: left;
   }
 
-  >.contents.image .trash {
+  > .contents.image .trash {
     position: absolute;
     width: 2em;
     height: 2em;
@@ -108,7 +108,7 @@
   display: flex;
   flex-wrap: wrap;
 
-  &>div {
+  & > div {
     position: relative;
     width: 90px;
     height: 90px;
@@ -136,7 +136,7 @@
     }
   }
 
-  &>div:first-child {
+  & > div:first-child {
     width: 100%;
     height: 180px;
   }
@@ -146,7 +146,19 @@
   display: flex;
   align-items: center;
 
-  &> :nth-child(2) {
-      margin-left: auto;
+  & > :nth-child(2) {
+    margin-left: auto;
+  }
+}
+
+html.dark-mode {
+  .location-view-grid {
+    .layer-key > span {
+      background-color: var(--dm-color-on);
+    }
+
+    .location canvas {
+      filter: invert(1);
+    }
   }
 }
