--- a/public/views/_test.html
+++ b/public/views/_test.html
@@ -45,19 +45,6 @@
             position: fixed;
         }
 
-        .map-attribution>.logo {
-            pointer-events: auto;
-            height: 1em;
-        }
-
-        #mapButton {
-            pointer-events: none;
-        }
-
-        #mapButton>* {
-            pointer-events: auto;
-        }
-
         #ctrls {
             z-index: 9999;
         }
@@ -130,15 +117,6 @@
                 padding-left: 4em;
             }
 
-            #mapButton {
-                position: absolute;
-                height: 100%;
-                grid-row: 1/4;
-                grid-column: 3;
-                background-color: #fff;
-                opacity: 0.8;
-            }
-
             #ctrl-panel {
                 transform: rotateY(180deg);
             }
@@ -159,34 +137,6 @@
                 grid-column: 3;
             }
 
-            #ctrls-divider {
-                grid-row: 1/4;
-                grid-column: 2;
-                background-image: url("{{dir}}/public/icons/pill-vertical.svg");
-                background-repeat: no-repeat;
-                background-position: center;
-                box-shadow: 3px 0px 6px -3px #777;
-                z-index: 9999;
-            }
-
-            #ctrls-divider:hover {
-                cursor: col-resize;
-            }
-
-            #tabview-divider {
-                position: relative;
-                grid-row: 2;
-                grid-column: 3;
-                background-image: url("{{dir}}/public/icons/pill-horizontal.svg");
-                background-repeat: no-repeat;
-                background-position: center;
-                background-color: white;
-                box-shadow: 0px -1px 6px -3px #777;
-            }
-
-            #tabview-divider:hover {
-                cursor: row-resize;
-            }
 
             .desktop-display-none {
                 display: none;
@@ -214,33 +164,11 @@
                 height: 100%;
             }
 
-            #mapButton {
-                position: fixed;
-                top: 0;
-                left: 0;
-                height: 100%;
-            }
-
-            #mapButton>button,
-            #mapButton>a {
-                margin-bottom: 10px;
-                background-color: white;
-                box-shadow: 1px 1px 3px #777;
-                border-radius: 50%;
-                opacity: 0.9;
-                padding: 5px;
-                width: 3em;
-                height: 3em;
-            }
 
             #ctrls {
                 width: 100%;
                 height: 100%;
                 position: relative;
-            }
-
-            #ctrls-divider {
-                display: none;
             }
 
             .mobile-hidden {
@@ -279,12 +207,12 @@
     <div id="ctrls" class="lighter-background">
 
         <div id="ctrl-tabs" class="hover">
-            <div data-id="layers" class="active material-symbols-outlined light-colour">
+            <div data-id="layers" class="active material-symbols-outlined">
               
                 layers
       
             </div>
-            <div data-id="locations" class="material-symbols-outlined light-colour">
+            <div data-id="locations" class="material-symbols-outlined">
               location_on
             </div>
       
