--- a/public/css/layout/_locationview.css
+++ b/public/css/layout/_locationview.css
@@ -150,3 +150,15 @@
     margin-left: auto;
   }
 }
+
+html.dark-mode {
+  .location-view-grid {
+    .layer-key > span {
+      background-color: var(--dm-color-on);
+    }
+
+    .location canvas {
+      filter: invert(1);
+    }
+  }
+}
