Fix eslint issue and commit css build

--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -215,7 +215,7 @@ body {
   &::after,
   &::before {
     border: solid transparent;
-    content: " ";
+    content: ' ';
     position: absolute;
     pointer-events: none;
   }
