Tabview - dark mode css;

--- a/public/css/base/_button.css
+++ b/public/css/base/_button.css
@@ -72,5 +72,12 @@ html.dark-mode {
     &.primary-colour {
       color: var(--dm-color-light);
     }
+    &.active {
+      color: var(--dm-color-on);
+    }
+
+    & > .primary-colour {
+      color: var(--dm-color-light);
+    }
   }
 }
