--- a/public/css/layout/_tabview.css
+++ b/public/css/layout/_tabview.css
@@ -8,7 +8,7 @@
   grid-template-rows: 50px auto;
 
   &.disabled::after {
-    content: "";
+    content: '';
     height: 100%;
     width: 100%;
     position: absolute;
@@ -17,7 +17,7 @@
     background-color: #fff;
     opacity: 0.7;
   }
- 
+
   & > .tabs {
     width: 100%;
     height: 50px;
@@ -42,7 +42,7 @@
       background-color: white;
       font-weight: bold;
     }
-    
+
     & > .tab:not(.active) > .header:hover {
       cursor: pointer;
     }
@@ -51,7 +51,7 @@
   & > .panel {
     position: relative;
 
-    & >.flex-col {
+    & > .flex-col {
       position: absolute;
       width: 100%;
       height: 100%;
@@ -62,13 +62,86 @@
       height: 100%;
       overflow-y: auto;
     }
-    
-    & >.dataview-target {
+
+    & > .dataview-target {
       position: absolute;
     }
   }
 
   & .dropdown > ul {
     position: fixed;
+  }
+}
+
+html.dark-mode {
+  .tabview {
+    .panel {
+      background-color: var(--dm-color-dark-neutral);
+
+      .btn-row {
+        background-color: var(--dm-color-dark-neutral);
+
+        button {
+          font-weight: bold;
+          color: var(--dm-color-on);
+          background: var(--dm-color-dark-faded);
+        }
+      }
+
+      & > .flex-col {
+        background-color: var(--dm-color-dark-faded);
+      }
+    }
+
+    .tabs,
+    .tabulator-tableholder {
+      background: var(--dm-color-darker);
+    }
+
+    .tab {
+      .header {
+        color: var(--dm-color-light);
+        background-color: var(--dm-color-dark-faded);
+      }
+
+      &.active .header {
+        background-color: var(--dm-color-on);
+      }
+    }
+
+    .tabulator {
+      .tabulator-footer {
+        background: var(--dm-color-dark);
+
+        .tabulator-page {
+          color: var(--dm-color-light);
+
+          &.active {
+            color: var(--dm-color-on);
+          }
+        }
+      }
+    }
+
+    .tabulator-header {
+      background: var(--dm-color-dark);
+    }
+
+    .tabulator-col {
+      background-color: var(--dm-color-dark-faded);
+      color: var(--dm-color-light);
+    }
+
+    .tabulator-row {
+      color: var(--dm-color-light);
+
+      &.tabulator-row-odd {
+        background-color: var(--dm-color-dark-neutral);
+      }
+
+      &.tabulator-row-even {
+        background-color: var(--dm-color-medium);
+      }
+    }
   }
 }
