--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -4,14 +4,14 @@
 /* public/css/base/_colours.css */
 :root {
   --color-off-black: #3f3f3f;
-  --color-primary: #003D57;
+  --color-primary: #003d57;
   --color-primary-light: #939faa;
   --color-light: #ffffff;
   --color-light-secondary: #f2f2f2;
   --color-light-tertiary: #fafafa;
   --color-mid: #e3e3e3;
-  --color-on: #E18335;
-  --color-no: #A21309;
+  --color-on: #e18335;
+  --color-no: #a21309;
   --color-changed: #ffffa7;
 }
 .primary-colour {
@@ -73,12 +73,12 @@ html.dark-mode {
   .input-range.single {
     &::after,
     &::before {
-      background: linear-gradient(
-        0deg,
-        transparent 0 45%,
-        #fff 45% 55%,
-        transparent 55% 100%
-      );
+      background:
+        linear-gradient(
+          0deg,
+          transparent 0 45%,
+          #fff 45% 55%,
+          transparent 55% 100%);
     }
   }
   #ctrl-panel {
@@ -198,12 +198,6 @@ html.dark-mode {
       color: var(--dm-color-light);
     }
   }
-}
-
-/* public/css/base/_font.css */
-a.mask-icon,
-a > .mask-icon {
-  background-color: var(--color-primary);
 }
 
 /* public/css/base/_globals.css */
@@ -1025,14 +1019,14 @@ input[type=search]::-webkit-search-cancel-button:hover {
   cursor: pointer;
 }
 html.dark-mode {
-  input[type='number'],
-  input[type='text'],
-  input[type='search'] {
+  input[type=number],
+  input[type=text],
+  input[type=search] {
     background: var(--dm-color-medium);
     color: var(--dm-color-light);
     border-color: var(--dm-color-dark-faded);
   }
-  input[type='search'] {
+  input[type=search] {
     &::placeholder {
       color: var(--dm-color-light-darker);
       opacity: 1;
@@ -1819,6 +1813,10 @@ html.dark-mode {
 }
 
 /* public/css/layout/_legacy.css */
+a.mask-icon,
+a > .mask-icon {
+  background-color: var(--color-primary);
+}
 button {
   &.mask-icon,
   & > .mask-icon {
