Removed redundant clause;

--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -33,6 +33,9 @@
 }
 
 html.dark-mode {
+  .active > .material-symbols-outlined {
+    color: var(--dm-color-on);
+  }
   .material-symbols-outlined {
     color: var(--dm-color-light-secondary);
 
