--- a/public/css/layout/_map_toolbar.css
+++ b/public/css/layout/_map_toolbar.css
@@ -12,17 +12,13 @@
     height: 100%;
     grid-row: 1/4;
     grid-column: 3;
-    background-color: #fff;
+    background-color: var(--dm-color-light);
     opacity: 0.8;
   }
 
   html.dark-mode {
     #mapButton {
       background-color: var(--dm-color-darker);
-
-      .material-symbols-outlined {
-        color: var(--color-light-secondary);
-      }
     }
   }
 }
@@ -38,7 +34,7 @@
     & > a {
       margin-bottom: 10px;
       background-color: var(--color-light);
-      box-shadow: 1px 1px 3px #777;
+      box-shadow: 1px 1px 3px var(--dm-color-medium);
       border-radius: 50%;
       opacity: 0.9;
       padding: 5px;
