--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1068,6 +1068,9 @@ html.dark-mode {
   color: var(--color-on);
 }
 html.dark-mode {
+  .active > .material-symbols-outlined {
+    color: var(--dm-color-on);
+  }
   .material-symbols-outlined {
     color: var(--dm-color-light-secondary);
     &.active {
@@ -2017,15 +2020,12 @@ html.dark-mode {
     height: 100%;
     grid-row: 1/4;
     grid-column: 3;
-    background-color: #fff;
+    background-color: var(--dm-color-light);
     opacity: 0.8;
   }
   html.dark-mode {
     #mapButton {
       background-color: var(--dm-color-darker);
-      .material-symbols-outlined {
-        color: var(--color-light-secondary);
-      }
     }
   }
 }
@@ -2039,7 +2039,7 @@ html.dark-mode {
     & > a {
       margin-bottom: 10px;
       background-color: var(--color-light);
-      box-shadow: 1px 1px 3px #777;
+      box-shadow: 1px 1px 3px var(--dm-color-medium);
       border-radius: 50%;
       opacity: 0.9;
       padding: 5px;
