--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1860,7 +1860,7 @@ button {
 html.dark-mode {
   .mask-icon {
     background: var(--color-light-secondary);
-    &::hover {
+    &:hover {
       background-color: var(--dm-color-dark-faded);
     }
     &.toggle {
