--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -182,108 +182,8 @@
         position: relative;
       }
 
-      
-
-      #ctrl-panel > div.active {
-        display: block;
-      }
-
-      .bg-icon.mapp {
-        background-image: url('https://geolytix.github.io/public/mapp_v4/emblem.svg');
-      }
-
-      @media only screen and (min-width: 768px) {
-        body {
-          display: grid;
-          grid-template-columns: 350px 10px auto;
-        }
-
-        body.fullscreen {
-          grid-template-columns: 0 0 auto !important;
-        }
-
-        body.fullscreen #ctrls {
-          display: none;
-        }
-
-        #Map {
-          grid-row: 1;
-          grid-column: 3;
-          position: relative;
-        }
-
-        #OL {
-          width: 100%;
-          height: 100vh;
-          position: absolute;
-        }
-
-        .map-attribution {
-          padding-left: 4em;
-        }
-
-        #mapButton {
-          position: absolute;
-          height: 100%;
-          grid-row: 1/4;
-          grid-column: 3;
-          background-color: #fff;
-          opacity: 0.8;
-        }
-
-        #ctrl-panel {
-          transform: rotateY(180deg);
-        }
-
-        #ctrl-panel > div {
-          transform: rotateY(180deg);
-        }
-
-        #ctrls {
-          grid-row: 1/4;
-          grid-column: 1;
-          height: 100%;
-          overflow: hidden;
-        }
-
-        #Tabview {
-          grid-row: 3;
-          grid-column: 3;
-        }
-
-        #ctrls-divider {
-          grid-row: 1/4;
-          grid-column: 2;
-          background-image: url('{{dir}}/public/icons/pill-vertical.svg');
-          background-repeat: no-repeat;
-          background-position: center;
-          box-shadow: 3px 0px 6px -3px #777;
-          z-index: 9999;
-        }
-
-        #ctrls-divider:hover {
-          cursor: col-resize;
-        }
-
-        #tabview-divider {
-          position: relative;
-          grid-row: 2;
-          grid-column: 3;
-          background-image: url('{{dir}}/public/icons/pill-horizontal.svg');
-          background-repeat: no-repeat;
-          background-position: center;
-          background-color: white;
-          box-shadow: 0px -1px 6px -3px #777;
-        }
-
-        #tabview-divider:hover {
-          cursor: row-resize;
-        }
-
-        .desktop-display-none {
-          display: none;
-        }
-      }
+    }
+  </style>
 
       @media only screen and (max-width: 768px) {
         html {
